# System-Reader

./: .gitignore  CMakeLists.txt  Test.txt
Front-End/: Front-End.csproj  Program.cs
include/: ISystemReader.hpp  MacOsReader.hpp  PosixReader.hpp  TcpForwarder.hpp  WindowsReader.hpp
src/: MacOsReader.cpp  PosixReader.cpp  TcpForwarder.cpp  WindowsReader.cpp  main.cpp
